--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -186,5 +189,6 @@
             <p>Нет доступных товаров</p>
         {% endif %}
     </div>
+{% endblock %}
 </body>
 </html>
